Bug#69172 Wasted work in method Config::illegal_change()